# RayTrace

./: CMakeLists.txt  box.hpp  factoryBox.hpp  factorySphere.hpp  factoryTetra.hpp  main.cpp  object.cpp  object.hpp  sphere.hpp  tetrahedron.cpp  tetrahedron.hpp  vec3.hpp  vecmath.hpp
CImg-3.1.0/: CImg.h
